TSG S1: updated dialogue

--- a/data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg
@@ -204,23 +204,23 @@
 
         [message]
             speaker=Moreth
-            message= _ "You’ll never take this village! I have watched too many of your kind ransack our homes and kill the townsmen! I’ll defend them to the death if I must!"
+            message= _ "You will never take this village! I have watched too many of your kind ransack our homes and kill the townsfolk! I’ll defend them to the death if I must!"
         [/message]
 
         [message]
             speaker=Deoran
             image=portraits/deoran-mad.png
-            message= _ "My kind? I am a knight of Wesnoth and a messenger of the king! What do you mean, <i>"my kind"</i>? And where is the South Guard?"
+            message= _ "My kind? I am a knight of Wesnoth and a messenger appointed by the King himself! What do you mean, <i>"my kind"</i>? And where is the South Guard?"
         [/message]
 
         [message]
             speaker=Moreth
-            message= _ "My deepest apologies, sir! I thought you were another one of the bandits. What are you doing here? Sir Gerrick and I are the last of the South Guard."
+            message= _ "My deepest apologies, sir! Bandits have been pillaging the villages and killing the peasants — we tried our utmost to resist and expel them, but their numbers were too great. Alas, Sir Gerrick and I are now the last two who remain. The South Guard is no more."
         [/message]
 
         [message]
             speaker=Deoran
-            message= _ "What? I was sent here to question Sir Loris, but it seems that the circumstances here are more dire than I had thought. We must arm the villagers and drive off the bandits before they can do any more harm!"
+            message= _ "What? I was sent here merely to question Sir Loris, but it seems that the circumstances here are more dire than I had thought. We must arm the villagers and drive off the bandits before they can do any more harm!"
         [/message]
 
         [message]
@@ -240,7 +240,7 @@
 
         [message]
             speaker=Urza Mathin
-            message= _ "Ha! This new commander is merely a boy. What kind of fool sent him here to stop us? He will soon share the fate of that swine Loris!"
+            message= _ "Ha! This new commander is merely a boy. What kind of fool sent him here to stop us? This sniveling child will soon share the fate of that swine Loris!"
         [/message]
     [/event]
 
@@ -275,17 +275,22 @@
 
         [message]
             speaker=Sir Gerrick
-            message= _ "At last, reinforcements! Sir knight, bandits have overrun the whole countryside, and are killing and pillaging without regard or mercy. Alas, we have lost most of our men and cannot fight them off."
+            message= _ "At last, reinforcements! Sir Knight, bandits have overrun the whole countryside, killing and pillaging without regard or mercy. My men and I tried to fight them off, but we were unfortunately routed and most of my men were slain. I have barely managed to defend this fort, but the South Guard has fallen and I do not know how much longer I can hold..."
         [/message]
 
         [message]
             speaker=Deoran
-            message= _ "We must re-man the posts and raise the South Guard once more. Unfortunately, I have seen only farm tools to arm our men with. We cannot fight bandits with pitchforks!"
+            message= _ "Do not despair! I am sure we can drive off these brigands if we rally the villagers and re-man the posts. Are there any weapons left in the citadel's armory?"
         [/message]
 
         [message]
             speaker=Sir Gerrick
-            message= _ "I will open the citadel’s armory. We have a supply of spears and bows, and lacked only a leader to bring us to battle with them!"
+            message= _ "A small supply of spears and bows still remains. I will distribute them to the peasants if that is your wish, commander."
+        [/message]
+
+        [message]
+            speaker=Deoran
+            message= _ "<i>So he has decided that I am to take command? Very well, I have never been one to back down from a challenge.</i> Yes, we should assemble what troops we can at my encampment and organize a front against the bandits. I shall raise the white and red banners and lead us against them. The South Guard fights again!"
         [/message]
 
         [allow_recruit]
@@ -375,7 +380,7 @@
 
         [message]
             speaker=narrator
-            message= _ "While you are in your camp, you can recruit more units. Build up an army to use against the bandits that Urza Mathin recruits."
+            message= _ "While you are in your camp, you can recruit more units. Build an army to use against the bandits that Urza Mathin recruits."
             image=wesnoth-icon.png
         [/message]
         [message]
@@ -409,7 +414,7 @@
             [then]
                 [message]
                     speaker=Sir Gerrick
-                    message= _ "Sir Deoran, bandits are most dangerous at night. Let us hold the north bank of the river until dawn and press our attack in the morning!"
+                    message= _ "Bandits are most dangerous at night, Sir Deoran. Let us hold the north bank of the river until dawn and press our attack in the morning!"
                 [/message]
 
                 [message]
@@ -499,12 +504,12 @@
 
         [message]
             speaker=Myssh
-            message= _ "Your people have been our allies ever since the days of Lord Typhon. We will help you drive these bandits from your lands if you allow us to live here in peace."
+            message= _ "Your people have been our allies ever since the days of Lord Typhon. We will help you drive these bandits from your lands if you allow us to continue living here in peace."
         [/message]
 
         [message]
             speaker=Deoran
-            message= _ "We welcome your aid! The rivers of this land will be yours when we are victorious."
+            message= _ "We welcome your aid! The rivers of this land will remain yours when we are victorious."
         [/message]
 
 #ifdef EASY
@@ -551,7 +556,7 @@
         [/message]
         [message]
             speaker=Aleron
-            message= _ "Stay your hand! It’s me, Aleron! The villagers hid me from the bandits when the town was overrun. They kept me safe while I was gravely wounded."
+            message= _ "Stay your hand! It is I, Aleron! The villagers hid me from the bandits when the town was overrun. They tended to my wounds while I was gravely wounded."
         [/message]
         [message]
             speaker=Sir Gerrick
@@ -584,11 +589,11 @@
 
         [message]
             speaker=Aleron
-            message= _ "More bandits? Begone, we have nothing left to give you."
+            message= _ "More bandits? Begone, we have nothing left for you."
         [/message]
         [message]
             speaker=unit
-            message= _ "We fight under the banner of the South Guard <i>against</i> the bandits! You should join us if you wish to drive these brigands from your land!"
+            message= _ "We fight under the banner of the South Guard <i>against</i> the bandits! Join us if you wish to drive these brigands from your land!"
         [/message]
         [message]
             speaker=Aleron
@@ -612,7 +617,7 @@
         [/message]
         [message]
             speaker=unit
-            message= _ "Do you not see the banners that we bear? The South Guard has risen again! Flee while you can, or you will meet a swift death by our spears!"
+            message= _ "Do you not see the banners we bear? The South Guard has risen again! Flee while you can, or you will meet a swift death at our hand!"
         [/message]
 #endif
     [/event]
@@ -719,7 +724,7 @@
 
         [message]
             speaker=Sir Gerrick
-            message= _ "Urza Mathin is dead! Congratulations, commander, though I am surprised that the king sent only you to help us. Did Sir Loris send word of our plight?"
+            message= _ "Urza Mathin is dead! Congratulations, commander, though I am surprised that the King sent only you to help us. Did Sir Loris not send word of our plight?"
         [/message]
 
         [message]
@@ -729,7 +734,7 @@
 
         [message]
             speaker=Sir Gerrick
-            message= _ "Aye, and the king must not have known either, else he would have sent more reinforcements. Though, you seem to be quite a capable commander despite your age."
+            message= _ "Aye, you could not have known if Sir Loris did not report of our predicament. I do wish that the King had sent more reinforcements, though you seem to be quite a capable commander despite your age."
         [/message]
 
         [message]
@@ -739,12 +744,12 @@
 
         [message]
             speaker=Sir Gerrick
-            message= _ "Almost two months. Sir Loris took one of our patrols along the Westin road and never returned. The next night, these ruffians struck and killed eight of my men. We defended the citadel and held out, hoping for reinforcements from Westin. Alas, they never came — I worry that something has happened in Westin."
+            message= _ "Almost two months! I know not why, but one night, Sir Loris took several of our patrols along the Westin road and never returned. The very next night evening, these ruffians struck and killed eight of my men. We defended the citadel and held out, hoping for reinforcements, but they never came. Something must have happened in Westin, else Sir Loris would have relieved us by now."
         [/message]
 
         [message]
             speaker=Deoran
-            message= _ "Well, it is still too early to fear the worst. We may yet find Sir Loris safe and sound in Westin. Come men, let us ride to the city!"
+            message= _ "Your story is indeed most peculiar, but we will not accomplish anything by staying here. We will have to seek out Sir Loris in Westin for answers. Come, men, let us ride to the city!"
         [/message]
 
         [endlevel]
