TSG S2: dialogue revisions

--- a/data/campaigns/The_South_Guard/scenarios/02_Proven_by_the_Sword.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/02_Proven_by_the_Sword.cfg
@@ -209,18 +209,18 @@
 
         [message]
             speaker=Deoran
-            message= _ "Look there! There's smoke coming from Westin! The bandits must have already overrun the garrison and are sacking the city!"
+            message= _ "Look there! Smoke rises from Westin! The bandits must have already overrun the garrison and are sacking the city!"
         [/message]
         [message]
             speaker=Sir Gerrick
-            message= _ "Then we must make haste before they leave the city in ruins and make a great slaughter of all who live therein."
+            message= _ "Then we must make haste before they leave the city in ruins and slaughter all who live therein."
         [/message]
 
         {HIGHLIGHT_IMAGE 22 16 items/gohere.png ()}
 
         [message]
             speaker=Urza Nalmath
-            message= _ "What?! Those soldiers seem to be coming from the northern forts... this must mean my brother Mathin is dead. Argh! They will pay for his death!"
+            message= _ "What?! Those soldiers come from the northern forts... this can only mean my brother Mathin is dead. Those fiends! They will pay for his death!"
         [/message]
 
         [objectives]
@@ -312,11 +312,11 @@
             [then]
                 [message]
                     speaker=unit
-                    message= _ "At last, the city is secure."
+                    message= _ "At last, the citadel is secure."
                 [/message]
                 [message]
                     speaker=Sir Gerrick
-                    message= _ "Excellent, but there is still no sign of Sir Loris. Sir Deoran, you should take command of the citadel."
+                    message= _ "Excellent, but there is still no sign of Sir Loris. Sir Deoran, you should take command of the keep."
                 [/message]
                 [show_objectives][/show_objectives]
             [/then]
@@ -354,11 +354,11 @@
         [message]
             speaker=Deoran
             image=portraits/deoran-mad.png
-            message= _ "More bandits?! Prepare to be slain by my lance!"
+            message= _ "More bandits?! Prepare to die!"
         [/message]
         [message]
             speaker=Minister Hylas
-            message= _ "Peace, I am no enemy! My name is Hylas, advisor to Sir Loris and member of the town council! Thanks to your timely arrival, the city is saved!"
+            message= _ "Peace, I am a friend! I am Hylas, advisor to Sir Loris and Chief Minister of the town council. Thanks to your timely arrival, the city is saved!"
         [/message]
         [message]
             speaker=Deoran
@@ -366,7 +366,7 @@
         [/message]
         [message]
             speaker=Minister Hylas
-            message= _ "Alas, Sir Loris fell in battle several days ago. For weeks, we warned him of the new power of these bandits, and yet he would never lead his men against them until their strength had become too great for us to handle. I had sent a messenger to the king about our plight, but some misfortune must have befallen him, for you are the first reinforcements to arrive here. If only Sir Loris had sent a rider earlier, he might have survived long enough to stand with us here."
+            message= _ "Alas, Sir Loris fell in battle several days ago. For weeks, we warned him of the new power of these bandits, yet he would never lead his men against them until their strength had become too great for us to handle. I sent a messenger to the king about our plight, but some misfortune must have befallen him, for you are the first reinforcements to arrive here. If only Sir Loris had sent a rider earlier, he might have survived long enough to stand with us here."
         [/message]
 
         [if]
@@ -468,12 +468,12 @@
             [then]
                 [message]
                     speaker=Sir Gerrick
-                    message= _ "We’re too late! They’re burning the whole city..."
+                    message= _ "We’re too late! They have burned the whole city..."
                 [/message]
                 [message]
                     speaker=Deoran
                     image=portraits/deoran-sad.png
-                    message= _ "Alas, Westin has fallen! There is nothing else I can do here — I can only return to the king and tell him of our loss..."
+                    message= _ "Alas, Westin has fallen! There is nothing else I can do here — I can only return to the King and report our loss here..."
                 [/message]
 
                 [endlevel]
@@ -597,7 +597,7 @@
 
         [message]
             speaker=unit
-            message= _ "Urgh, my brother has died unavenged! I have failed!"
+            message= _ "My brother has died unavenged! I have failed!"
         [/message]
 
         [kill]
@@ -687,17 +687,17 @@
 
         [message]
             speaker=Deoran
-            message= _ "My men have been trained to fight the living. I do not know that we can protect the city from foes as unnatural as these by ourselves. It is probably best that I go to meet the elves and see if they can be of any aid."
+            message= _ "My men have been trained to fight the living. I do not know that we can protect the city from foes as unnatural as these by ourselves. It is probably best that I meet the elves in hope that their counsel will be of some aid."
         [/message]
 
         [message]
             speaker=Minister Hylas
-            message= _ "I will accompany you, Sir Deoran. I have studied the arts of holy magic and my skills may be of some use against the dark ones."
+            message= _ "I will accompany you, Sir Deoran. I have studied sacred arts and my skills may be of some use against the dark ones."
         [/message]
 
         [message]
             speaker=Deoran
-            message= _ "Very well. Although it will probably take too long to send word to the king for reinforcements, I remember there being a small outpost north of here. I will send a message to them asking for a few riders, then we should make haste toward the Aethenwood to find the elves."
+            message= _ "Very well. Although it will probably take too long to send word to the King for reinforcements, I remember there being a small outpost within a couple day's ride of here. I will send a message to them asking for a few riders, then we should make haste toward the Aethenwood to find the elves."
         [/message]
 
         {CLEAR_VARIABLE citadel_secured}
