TSG S3: updated dialogue

--- a/data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg
@@ -210,18 +210,18 @@
 
         [message]
             speaker=narrator
-            message= _ "Deoran and his men came to the eastern border of the Aethenwood, where the towering trees of the elven forest loomed in the distance."
+            message= _ "Deoran and his men came to the eastern border of the Aethenwood, where the towering trees of the elven forest loomed close overhead."
             image=wesnoth-icon.png
         [/message]
 
         [message]
             speaker=Deoran
-            message= _ "Look to the north! There lies the forest of the elves. Let us hasten across the river and the hills."
+            message= _ "Look to the west! There lies the forest of the elves. Let us hasten across the river and the hills."
         [/message]
 
         [message]
             speaker=Minister Hylas
-            message= _ "I must advise caution, Sir Deoran. No man has set foot in the elvish woods for many a year. They have never been friendly toward humankind, and we do not know how they will receive us now."
+            message= _ "I must advise caution, Sir Deoran. No man has set foot in the elvish woods for many a year. They have never been friendly toward humankind, and we do not know how they will receive us now, especially after Sir Loris spurned them."
         [/message]
 
         [message]
@@ -341,7 +341,7 @@
 
         [message]
             speaker=unit
-            message= _ "Argh! Even our undead allies cannot stand against this commander! The dark one lied to us!"
+            message= _ "Even our undead allies cannot stand against this commander! The dark one lied to us!"
         [/message]
 
         [kill]
@@ -412,7 +412,7 @@
 
         [message]
             speaker=Linderion
-            message= _ "Halt! Who enters our citadel without leave?"
+            message= _ "Halt! Who enters our sacred grove without leave?"
         [/message]
 
         [message]
@@ -422,7 +422,7 @@
 
         [message]
             speaker=Linderion
-            message= _ "Choose your words wisely, human, for the penalty for trespassing on our lands is death."
+            message= _ "Choose your words wisely, human. Know that the penalty for trespassing on our lands is death. What is your name?"
         [/message]
 
         [message]
@@ -433,7 +433,7 @@
         [message]
             speaker=Ethiliel
             # wmllint: local spelling Elrath
-            message= _ "Stay your hand, Linderion. This man bears the banner of Wesnoth and appears to come to us in peace. Tell us, what brings you to the hallowed citadel of Elrath?"
+            message= _ "Stay your hand, Linderion. This man bears the banner of Wesnoth and appears to come to us in peace. What brings you to the hallowed citadel of Elrath?"
         [/message]
 
         [message]
@@ -443,7 +443,17 @@
 
         [message]
             speaker=Ethiliel
-            message= _ "The elves know of the great southern forest, and have walked its paths many times."
+            message= _ "We sent you a messenger regarding the undead, did we not? You were forewarned of the blight marching upon your land, and yet you did not prepare adequately."
+        [/message]
+
+        [message]
+            speaker=Deoran
+            message= _ "I do not aim to make excuses, my lady, but I have been here for scarcely a week! I do not know why the previous commander did not act on your advice, but I assure you that I will not make the same mistakes he did!"
+        [/message]
+
+        [message]
+            speaker=Ethiliel
+            message= _ "For your own sake, I hope that you do not. As for the matter at hand, the elves know of the great southern forest, and have walked its paths many times."
         [/message]
 
         [message]
