TSG S4: dialogue wording revisions

--- a/data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg
@@ -247,7 +247,7 @@
 
         [message]
             speaker=Ethiliel
-            message= _ "They would not dare without the aid of the dark ones, but we will vanquish them all nonetheless. Now, listen well to me, humans. The Great Sage Mebrin is ancient and remembers well Haldric’s betrayal of the elves. Should one of you set foot in his village first, he will almost certainly drive us away!"
+            message= _ "They would not dare without the aid of the dark ones, but we will vanquish them all nonetheless. Now, listen well to me, humans. The Great Sage Mebrin is ancient and remembers well Haldric’s betrayal of the elves. Should one of you set foot in his village first, he will certainly drive us away!"
         [/message]
 
         [message]
@@ -262,7 +262,7 @@
 
         [message]
             speaker=Deoran
-            message= _ "Very well, we will put our trust in you, Ethiliel. While you try to convince Mebrin to help us, we will deal with the intruders."
+            message= _ "Very well, we will put our trust in you, Ethiliel. But first, we have a battle to attend to."
         [/message]
 
         [message]
@@ -583,7 +583,7 @@
 
         [message]
             speaker=Jera Ilras
-            message= _ "You’re too late! Even if you could find our stronghold, you could never defeat our master!"
+            message= _ "You’re too late! Even if you could find our stronghold, you will never defeat our master!"
         [/message]
 
         [message]
