TSG S5: dialogue updates

--- a/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
@@ -215,18 +215,13 @@
         [/redraw]
 
         [message]
-            speaker=Ethiliel
-            message= _ "This is far enough. We should stop here and discuss what to do next."
-        [/message]
-
-        [message]
             speaker=Deoran
             message= _ "It's so cold here! And this fog is so thick. This cannot be natural for a forest like this."
         [/message]
 
         [message]
             speaker=Minister Hylas
-            message= _ "I fear this is the doing of a powerful lord of the undead..."
+            message= _ "I fear this is the effects of powerful, black magics."
         [/message]
 
         [message]
@@ -236,8 +231,29 @@
 
         [message]
             speaker=Ethiliel
-            message= _ "Indeed, the battle against the undead will not be easy, and so I have asked some of people to aid us. My soldiers and shamans will fight at your command."
+            message= _ "So, even you humans are being affected by the dark sorcery that taints this land. Then, there is no place than here. We should stop and rest before we proceed."
         [/message]
+
+        [message]
+            speaker=Deoran
+            message= _ "This place is indeed foreboding, but why do we need to stop and make camp specifically here?"
+        [/message]
+
+        [message]
+            speaker=Ethiliel
+            message= _ "The Black River is before us. Few elves have crossed it, and fewer still have explored the dark forest beyond. If the undead come from across the river, we must exercise great caution in our search for them."
+        [/message]
+
+        [message]
+            speaker=Deoran
+            message= _ "Even if this forest is decidedly grim, we must not fear its inhabitants so much so that we dare not even confront them. I am ready and willing to fight!"
+        [/message]
+
+        [message]
+            speaker=Ethiliel
+            message= _ "Caution, not fear, human. Anxious as I am to find the whereabouts of our great sage, it would do us no good to charge straight into the trap of the enemy. We will need help to scour woods as dangerous as these, and so I have asked some of my people to aid us. My soldiers and shamans will fight at your command."
+        [/message]
+
 #ifdef EASY
         [message]
             speaker=narrator
@@ -250,29 +266,30 @@
             message= _ "You may now recruit Elvish Shamans. Elvish Shamans are ranged support units who heal adjacent allies every turn and slow their enemies. Use them to heal wounded soldiers and weaken enemy units."
         [/message]
 #endif
-        [message]
-            speaker=Deoran
-            message= _ "Thank you for the help, but why do we need to stop to make camp here?"
-        [/message]
 
         [message]
             speaker=Ethiliel
-            message= _ "The Black River is before us. Few elves have crossed it, and fewer still have explored the dark forest beyond. If the undead come from across the river, we must exercise great caution in our search for them."
+            message= _ "Now, so long as you feel prepared to brave the perils beyond the river, we can continue onward."
+        [/message]
+
+        [message]
+            speaker=Deoran
+            message= _ "Thank you for your help, my lady. I am ready for whatever lies in wait for us, be it man, beast, or skeleton. Sir Gerrick, Minister Hylas?"
         [/message]
 
         [message]
             speaker=Sir Gerrick
-            message= _ "Indeed, this forest is decidedly grim, but we must not fear its inhabitants so much so that we dare not even confront them."
+            message= _ "On your order, Sir Deoran."
         [/message]
 
         [message]
-            speaker=Ethiliel
-            message= _ "Caution, not fear, human. Anxious as I am to find the whereabouts of our great sage, it would do us no good to charge straight into the trap of the enemy. Nevertheless, we elves do not fear the undead, and they will be destroyed for their foul transgressions on our land. You humans should feel much the same, with how many of your people have been slaughtered by the dark ones as well."
+            speaker=Minister Hylas
+            message= _ "Evil never rests — nor does the light that seeks to exterminate it."
         [/message]
 
         [message]
             speaker=Deoran
-            message= _ "Indeed, we must not fear the very blight we shall soon be battling. Let us gather our wits and probe the forest for its secrets."
+            message= _ "Very well then. Come, men, let us gather our wits and probe the forest for its secrets."
         [/message]
 
         [objectives]
@@ -613,7 +630,7 @@
 
         [message]
             speaker=Ethiliel
-            message= _ "You imprisoned Mebrin?! You loathsome scum!"
+            message= _ "You imprisoned Mebrin?! You loathsome vermin!"
         [/message]
 
         [message]
@@ -622,8 +639,13 @@
         [/message]
 
         [message]
+            speaker=Ethiliel
+            message= _ "A complete and utter lie from complete and utter scum."
+        [/message]
+
+        [message]
             speaker=Deoran
-            message= _ "And Mebrin?"
+            message= _ "Please, Ethiliel, let us hear him out. What happened to Mebrin?"
         [/message]
 
         [message]
@@ -644,7 +666,7 @@
         [message]
             speaker=Ethiliel
             image=portraits/ethiliel-mad.png
-            message= _ "You dare spew such lies! Mebrin would never fight for the undead, much less lead them!"
+            message= _ "You dare spew such falsities! Mebrin would never fight for the undead, much less lead them!"
         [/message]
 
         [message]
@@ -782,7 +804,7 @@
                             [message]
                                 speaker=Ethiliel
                                 image=portraits/ethiliel-mad.png
-                                message= _ "Pah, all humans are the same! You are no better than these criminals, the very pigs who sacked your towns and burned your villages! If you are brave enough to spurn the aid of the elves, then you are brave enough to find your own way in this forest! Come, my people, let us return to our lands. We were foolish to ever have any dealings with these men. Do not set foot in our land ever again, humans, for you have brought us nothing but grief."
+                                message= _ "So it comes to this. All humans are the same! You are no better than these criminals, the very pigs who sacked your towns and burned your villages! If you are brave enough to spurn the aid of the elves, then you are brave enough to find your own way in this forest! Come, my people, let us return to our lands. We were foolish to ever have any dealings with these men. Do not set foot in our land ever again, humans, for you have brought us nothing but grief."
                             [/message]
 
                             [kill]
@@ -850,7 +872,7 @@
             [then]
                 [message]
                     speaker=Urza Afalas
-                    message= _ "Argh! I pay for my crimes, but without me, you cannot fight the undead..."
+                    message= _ "I pay for my crimes, but without me, you cannot fight the undead..."
                 [/message]
                 [endlevel]
                     result=defeat
@@ -1027,7 +1049,7 @@
 
         [message]
             speaker=Sir Gerrick
-            message= _ "We have beaten them both, fugitives and undead!"
+            message= _ "We have beaten them both, outlaws and undead!"
         [/message]
         [message]
             speaker=Deoran
@@ -1056,7 +1078,7 @@
         [/message]
         [message]
             speaker=Ethiliel
-            message= _ "Yes, that is fine. My kinsfolk will protect you and your message!"
+            message= _ "Yes, my kinsfolk will protect you and your message."
         [/message]
         [if]
             [variable]
