TSG S6a: dialogue update

--- a/data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg
@@ -215,7 +215,7 @@
 
         [message]
             speaker=Eliomir
-            message= _ "Sir Gerrick, you must return to Kerlath Province and warn your people of the danger from the south. We will lead you through the forest and clear the foes from your path. You may choose some of your veterans to accompany your journey. Any troops you leave behind will still have time to join Ethiliel and Deoran."
+            message= _ "Sir Gerrick, you must return to Wesnoth and warn your people of the danger from the south. We will lead you through the forest and clear the foes from your path. You may choose some of your veterans to accompany your journey. Any troops you leave behind will still have time to join Ethiliel and Deoran."
         [/message]
 
         [remove_shroud]
@@ -284,6 +284,7 @@
             [then]
                 [message]
                     # wmllint: local spelling Hss
+                    # po: Hss is a hissing sound made by the naga
                     speaker=Queen Xeila
                     message= _ "Hss... Here come the humans who have made a pact with the cursed mermen!"
                 [/message]
