TSG S6a: dialogue wording changes

--- a/data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg
@@ -215,7 +215,7 @@
 
         [message]
             speaker=Eliomir
-            message= _ "Sir Gerrick, you must return to Wesnoth and warn your people of the danger from the south. We will lead you through the forest and clear the foes from your path. You may choose some of your veterans to accompany your journey. Any troops you leave behind will still have time to join Ethiliel and Deoran."
+            message= _ "Sir Gerrick, you must return to Westin and warn your people of the danger from the south. We will lead you through the forest and clear the foes from your path. You may choose some of your veterans to accompany your journey. Any troops you leave behind will still have time to join Ethiliel and Deoran."
         [/message]
 
         [remove_shroud]
@@ -407,7 +407,7 @@
         [/filter]
         [message]
             speaker=Kramak
-            message= _ "Bad food! It hurt me. Arrrrggghhhh!!"
+            message= _ "Bad food! It hurt me. Me no like. Me pain..."
         [/message]
     [/event]
 
