TSG S6b: updated dialogue strings

--- a/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
@@ -1125,7 +1125,7 @@ _f, _f, Re, _f
         [/filter]
         [message]
             speaker=unit
-            message= _ "Argh! I pay for my crimes, but without me, you will never make it back to Wesnoth..."
+            message= _ "I pay for my crimes, but without me, you will never make it back to Kerlath..."
         [/message]
         [kill]
             x,y=$x1,$y1
